--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,11 @@
     </dependencyManagement>
 
     <dependencies>
-    
+         <dependency>
+             <groupId>net.sf.supercsv</groupId>
+            <artifactId>super-csv</artifactId>
+             <version>2.4.0</version>
+        </dependency>
         <dependency>
             <groupId>tech.jhipster</groupId>
             <artifactId>jhipster-framework</artifactId>
