--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -41,7 +41,15 @@ spring:
   h2:
     console:
       # disable spring boot built-in h2-console since we start it manually with correct configuration
-      enabled: false
+      enabled: true
+
+  data:
+    datasource:
+      jdbc-url: jdbc:h2:mem:mydb
+      username: sa
+      password:
+      driverClassName: org.h2.Driver
+
   jpa:
     database-platform: tech.jhipster.domain.util.FixedH2Dialect
   liquibase:
