--- a/pom.xml
+++ b/pom.xml
@@ -307,7 +307,15 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.9</version>
       </dependency>
-    </dependencies>
+
+      <!-- gson dependency-->
+
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.6</version>
+        </dependency>
+      </dependencies>
 
     <build>
         <defaultGoal>spring-boot:run</defaultGoal>
