--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "rxjs": "6.6.7",
     "swagger-ui-dist": "3.52.5",
     "tslib": "2.3.1",
+    "tslint": "^6.1.3",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
