Added JDBC export when adding or deleting a user

--- a/pom.xml
+++ b/pom.xml
@@ -425,6 +425,12 @@
                             <artifactId>nohttp-checkstyle</artifactId>
                             <version>${nohttp-checkstyle.version}</version>
                         </dependency>
+                        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+                        <dependency>
+                            <groupId>mysql</groupId>
+                            <artifactId>mysql-connector-java</artifactId>
+                            <version>8.0.28</version>
+                        </dependency>
                     </dependencies>
                     <configuration>
                         <configLocation>checkstyle.xml</configLocation>
