--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -13,7 +13,7 @@ services:
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
     ports:
-      - 127.0.0.1:8080:8080
+      - '8080:8080'
   employeeonboardingsystem-postgresql:
     image: postgres:13.4
     # volumes:
@@ -25,4 +25,22 @@ services:
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
     ports:
-      - 127.0.0.1:5432:5432
+      - '5432:5432'
+  openldap:
+    image: osixia/openldap:1.5.0
+    container_name: openldap
+    environment:
+      - LDAP_ORGANISATION="JKU"
+      - LDAP_DOMAIN=jku.at
+    ports:
+      - '389:389'
+
+  phpldapadmin:
+    image: osixia/phpldapadmin:0.9.0
+    container_name: phpldapadmin
+    environment:
+      - PHPLDAPADMIN_LDAP_HOSTS=openldap
+    ports:
+      - '6443:443'
+    depends_on:
+      - openldap
