--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -33,7 +33,7 @@ spring:
       enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/employeeonboardingsystem
+    url: jdbc:postgresql://localhost:5432/employeeonboardingsystem?relaxAutoCommit=true
     username: employeeonboardingsystem
     password:
     hikari:
