--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -26,6 +26,8 @@ management:
         enabled: false
 
 spring:
+  logging:
+    level: ERROR
   devtools:
     restart:
       enabled: false
@@ -60,7 +62,6 @@ spring:
     locator:
       discovery:
         enabled: true
-
 # ===================================================================
 # To enable TLS in production, generate a certificate using:
 # keytool -genkey -alias employeeonboardingsystem -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore keystore.p12 -validity 3650
